<resources>
    <string name="app_name">InfraAndroid</string>
    <string name="home_user_hi">안녕하세요! %s님</string>
    <string name="home_make_new_proj">프로젝트 생성</string>
    <string name="home_recommend_proj">이런 프로젝트는 어떠세요?</string>
    <string name="home_hot_proj">지금 핫한 프로젝트!</string>
    <string name="home_self_development">자기개발이 목적이라면?</string>
    <string name="category_my_idea_description">내 아이디어 수정, 신청현황,\n팀원 관리를 해보세요!</string>
    <string name="category_look_my_idea_list">내 아이디어 목록 보기 ></string>
    <string name="category_search_hint">키워드를 입력해보세요. 예시) 어플, 봉사, 스터디</string>
    <string name="user_guide_search_hint">키워드를 입력해보세요.</string>
    <string name="login_sign_up"><u>인프라가 처음이신가요? 회원가입하기</u></string>
    <string name="sigin_in_comment">인프라에서 다양한\n아이디어를 접해볼까요?</string>
    <string name="make_id_hint">영문,숫자 모두 포함 6자리 이상</string>
    <string name="make_pw_hint">영문,숫자,특수문자 모두 포함 8~20자리</string>
    <string name="make_nickname_hint">12자까지 제한</string>
    <string name="same_id_warning">중복되는 아이디 입니다!</string>
    <string name="same_nickname_warning">중복되는 닉네임입니다.</string>
    <string name="certify_phone">휴대폰 본인인증</string>
    <string name="input_phone_hint">하이픈(-)포함해서 입력해주세요</string>
    <string name="certification_number_hint">인증번호 5자리 입력</string>
    <string name="find_pw_finish">이메일로 새 비밀번호를 보냈습니다\n가입시 등록한 이메일을 확인해주세요</string>
    <string name="input_again">인증번호를 다시 입력해주세요.</string>
    <string name="sign_up_nickname_comment">인프라에서 %s님을\n어떻게 부를까요?</string>
    <string name="sign_up_third_comment">마지막으로\n입력하면 가입 완료!</string>
    <string name="email_hint">example123@gmail.com</string>
    <string name="sign_up_complete_comment">가입완료!\n인프라를 구축해볼까요?</string>
    <string name="my_info_name">%s</string>
    <string name="today_date">%s년 %s월 %s일</string>
    <string name="hash_tag_alarm_comment">인프라가 키워드를 통해서\n알맞은 프로젝트를 알려드립니다.</string>
</resources>