<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/infra_gray_c"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.infra.infraandroid.id.view.SignUpSecondFragment">

        <TextView
            android:id="@+id/sign_up_second_comment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certify_phone"
            android:textColor="@color/infra_blue_f"
            android:fontFamily="@font/leferi_base_bold"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="24dp"/>

        <TextView
            android:id="@+id/sign_up_page_two_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2/4"
            android:textColor="@color/infra_gray_s"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/sing_up_second_phone_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/input_phone_edit_text"
            app:layout_constraintLeft_toLeftOf="@id/input_phone_edit_text"
            android:text="전화번호"
            android:textSize="11sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textColor="@color/infra_gray_q"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:translationZ="90dp"/>

        <EditText
            android:id="@+id/input_phone_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/login_background"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:hint="@string/input_phone_hint"
            android:includeFontPadding="false"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:layout_marginTop="24dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="14dp"
            android:textColorHint="@color/infra_gray_a"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/receive_message_button"
            app:layout_constraintTop_toBottomOf="@id/sign_up_second_comment_text_view"/>

        <TextView
            android:id="@+id/sign_up_second_certification_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/input_certification_number_edit_text"
            app:layout_constraintLeft_toLeftOf="@id/input_certification_number_edit_text"
            android:text="인증번호"
            android:textSize="11sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textColor="@color/infra_gray_q"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:translationZ="90dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/receive_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_button_selector"
            android:text="인증 받기"
            app:layout_constraintLeft_toRightOf="@id/input_phone_edit_text"
            app:layout_constraintTop_toTopOf="@id/input_phone_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/input_phone_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:paddingHorizontal="18dp"
            style="?android:borderlessButtonStyle"
            android:enabled="false"/>

        <EditText
            android:id="@+id/input_certification_number_edit_text"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="28dp"
            android:paddingBottom="14dp"
            android:hint="@string/certification_number_hint"
            android:maxLength="5"
            app:layout_constraintTop_toBottomOf="@id/input_phone_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:textColorHint="@color/infra_gray_a" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_third_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_button_selector"
            android:textColor="@color/white"
            android:text="다음"
            style="?android:borderlessButtonStyle"
            android:layout_marginTop="254dp"
            android:layout_marginHorizontal="26dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_certification_number_edit_text"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:textSize="16sp"
            android:paddingVertical="4dp"
            android:enabled="false"/>

        <TextView
            android:id="@+id/re_input_code_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_certification_number_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/input_again"
            android:textColor="@color/infra_red_a"
            android:layout_marginLeft="35dp"
            android:textSize="12sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/certify_code_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_accept"
            android:layout_marginTop="28dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@id/input_certification_number_edit_text"
            app:layout_constraintRight_toRightOf="@id/input_certification_number_edit_text"
            android:visibility="invisible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>