<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/infra_blue_d">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/category_idea_search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/category_search_hint"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:inputType="phone"
                android:textSize="11dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="20dp"
                android:paddingLeft="20dp"
                android:paddingVertical="4dp"
                />
            <ImageView
                android:id="@+id/category_search_image_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_codicon_search"
                app:layout_constraintTop_toTopOf="@id/category_idea_search_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/category_idea_search_edit_text"
                app:layout_constraintRight_toRightOf="@id/category_idea_search_edit_text"
                android:layout_marginEnd="13dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/look_my_idea_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/look_my_idea_background"
                app:layout_constraintTop_toBottomOf="@id/category_idea_search_edit_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="28dp"
                android:layout_marginHorizontal="30dp">


                <TextView
                    android:id="@+id/look_my_idea_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="내 아이디어 보기"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:fontFamily="@font/noto_sans_kr_bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="18dp"
                    android:includeFontPadding="false"
                    />

                <TextView
                    android:id="@+id/look_my_idea_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_my_idea_description"
                    app:layout_constraintTop_toBottomOf="@id/look_my_idea_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:textColor="@color/infra_gray_h"
                    android:textSize="12sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="18dp"
                    android:includeFontPadding="false"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_idea_lightbulb"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/look_my_idea_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/look_my_idea_button_background"
                android:text="@string/category_look_my_idea_list"
                app:layout_constraintTop_toBottomOf="@id/look_my_idea_constraint_layout"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:includeFontPadding="false"
                android:minHeight="0dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/idea_list_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/idea_list_constraint_layout_background"
                app:layout_constraintTop_toBottomOf="@id/look_my_idea_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp">

                <ImageView
                    android:id="@+id/idea_list_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_blue_lightbulb"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/idea_list_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/idea_list_image_view"
                    app:layout_constraintTop_toTopOf="@id/idea_list_image_view"
                    app:layout_constraintBottom_toBottomOf="@id/idea_list_image_view"
                    android:text="아이디어 목록"
                    android:fontFamily="@font/noto_sans_kr_bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    android:includeFontPadding="false"/>

                <Button
                    android:id="@+id/idea_list_look_all_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  전체보기"
                    android:textColor="@color/infra_gray_h"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/idea_list_image_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:includeFontPadding="false"
                    android:layout_marginTop="16dp"
                    android:gravity="left"/>

                <Button
                    android:id="@+id/idea_list_develop_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  개발"
                    android:textColor="@color/infra_gray_h"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/idea_list_look_all_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:includeFontPadding="false"
                    android:gravity="left"/>

                <Button
                    android:id="@+id/idea_list_competition_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  공모전"
                    android:textColor="@color/infra_gray_h"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/idea_list_develop_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:includeFontPadding="false"
                    android:gravity="left"/>

                <Button
                    android:id="@+id/idea_list_study_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  스터디"
                    android:textColor="@color/infra_gray_h"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/idea_list_competition_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:includeFontPadding="false"
                    android:gravity="left"/>

                <Button
                    android:id="@+id/idea_list_etc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  기타"
                    android:textColor="@color/infra_gray_h"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/idea_list_study_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:includeFontPadding="false"
                    android:layout_marginBottom="12dp"
                    android:gravity="left"/>


            </androidx.constraintlayout.widget.ConstraintLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>